<resources>
    <string name="app_name">AutoMate</string>
    <string name="log_in_continue">Или продолжи со</string>
    <string name="log_in_continue_email">Најави се со Емаил</string>
    <string name="log_in_back_arrow">Back Arrow</string>
    <string name="log_in_title">Најави се</string>
    <string name="log_in_email_text">Емаил</string>
    <string name="log_in_enter_your_email_address">Внеси емаил адреса</string>
    <string name="log_in_password">Лозинка</string>
    <string name="log_in_enter_your_password">Внеси лозинка</string>
    <string name="log_in_remember_me">Запамти ме</string>
    <string name="log_in_forgot_password"><u>Заборавена лозинка</u></string>
    <string name="log_in_text">Најави се</string>
    <string name="log_in_dont_have_acc">Сеуште немате профил?</string>
    <string name="log_in_create_acc"><u>Креирај профил!</u></string>
    <string name="log_in_hide_image">Hide Image Picture</string>
    <string name="sign_up_title">Регистрирај се</string>
    <string name="sign_up_continue">Продолжи</string>
    <string name="sign_up_log_in"><u>Најави се</u></string>
    <string name="sign_up_already_have_an_account">Имам профил!</string>
    <string name="forgot_password_send">Испрати</string>
    <string name="forgot_password_title">Заборавена лозинка</string>
    <string name="sign_up_privacy_policy">Ги прочитав и се согласувам со <font color='#32D6D8'><u>условите за користење</u></font> и <font color='#32D6D8'><u>правилата за приватност.</u></font></string>
    <string name="sign_up_confirm_password">Потврди лозинка</string>
    <string name="bottom_nav_bar_settings">Поставки</string>
    <string name="bottom_nav_bar_scan">Скенирај</string>
    <string name="bottom_nav_bar_wallet">Паричник</string>
    <string name="settings_title">Поставки</string>
    <string name="settings_about">За mLoyalty</string>
    <string name="settings_change_password">Промени лозинка</string>
    <string name="settings_language">Јазик</string>
    <string name="settings_faq">ЧПП</string>
    <string name="settings_support">Поддршка</string>
    <string name="settings_logout">Одјави се</string>
    <string name="home_title">Мои картички</string>
    <string name="home_card_list_empty">Немате внесено лојална картичка</string>
    <string name="home_scan_card">Скенирајте ја вашата прва картичка. Кликнете на плус (\"+\") копчето во десниот горен дел од екранот.</string>
    <string name="home_my_loyalty_cards">Мои лојални картички</string>
    <string name="home_see_all"><u>Види ги сите</u></string>
    <string name="home_search">Пребарај</string>
    <string name="scan_please_choose">Ве молиме одберете</string>
    <string name="scan_photo_library">Фото библиотека</string>
    <string name="scan_scan_the_code">Скенирај картичка</string>
    <string name="add_card_title">Детали за картичката</string>
    <string name="add_card_loyalty_card">Лојална Картичка</string>
    <string name="add_card_name_of_card">Име на картичка</string>
    <string name="add_card_enter_name_of_card">Внеси име на картичка</string>
    <string name="add_card_add_as_favorite_loyalty_card">Додади како омилена лојална картичка</string>
    <string name="add_card_choose_color">Одбери боја</string>
    <string name="add_card_button">Додади картичка</string>
    <string name="add_card_please_fill_card_name">Ве молиме внесете име на картичка</string>
    <string name="edit_card_title">Промени картичка</string>
    <string name="edit_card_loyalty_card">Лојална картичка:</string>
    <string name="edit_card_delete_card">Избриши</string>
    <string name="add_card_enter_your_card_name">Внесете име на картичка</string>
    <string name="edit_card_edit_card_name">Промени име на картичка</string>
    <string name="edit_card_save">Зачувај</string>
    <string name="change_password_old_password">Сегашна лозинка</string>
    <string name="change_password_new_password">Нова лозинка</string>
    <string name="change_password_enter_your_new_password">Внесете нова лозинка</string>
    <string name="change_password_done">Заврши</string>
    <string name="change_password_title">Промени лозинка</string>
    <string name="change_password_enter_your_current_password">Внесете ја вашата сегашна лозинка</string>
    <string name="app_support_subject">mLoyalty Поддршка</string>
    <string name="app_support_email">support@mloyalty.com</string>
    <string name="language_title">Јазик</string>
    <string name="language_macedonian">Македонски</string>
    <string name="language_english">English</string>
    <string name="no_internet_connection">Нема интернет конекција</string>
    <string name="no_user_in_database">Погрешен емаил</string>
    <string name="wrong_password">Погрешна лозинка или Google сметката е креирана</string>
    <string name="email_already_used">Избраниот емаил веќе постои</string>
    <string name="permission_required">Потребна е дозвола</string>
    <string name="permission_message">Потребен е пристап до камерата за обработка на бар-кодови</string>
    <string name="pick_color">Одберете боја</string>
    <string name="color_picker">Color Picker</string>
    <string name="cancel">Откажи</string>
    <string name="name_long">Името е премногу долго</string>
    <string name="card_added">Картичката е додадена</string>
    <string name="password_no_whitespace">Лозинката не може да започнува или завршува со празно место</string>
    <string name="password_8_chars">Лозинката треба да содржи најмалку 8 карактери</string>
    <string name="strong_password">Ве молиме внесете посложена лозинка</string>
    <string name="password_20_chars">Лозинката треба да содржи најмногу 20 знаци</string>
    <string name="passwords_not_match">Лозинките не се совпаѓаат</string>
    <string name="password_change_successful">Лозинката е успешно променета</string>
    <string name="email_format_incorrect">Форматот на Е-Маил адресата не е точна</string>
    <string name="email_sent">Испратен Е-Маил</string>
    <string name="log_in_successful">Успешна најава</string>
    <string name="card_deleted">Картичката е избришана</string>
    <string name="card_changes_saved">Промените на картичката се зачувани</string>
    <string name="delete_card">Да се избрише картичката?</string>
    <string name="delete">Избриши</string>
    <string name="settings_login_settings">Поставки за најавување</string>
    <string name="login_settings_delete_account">Избриши сметка</string>
    <string name="login_settings_delete_account_confirmation">Дали сте сигурни дека сакате да ја избришете вашата сметка?</string>
    <string name="login_settings_delete_account_yes">Да</string>
    <string name="login_settings_delete_account_no">Не</string>
    <string name="login_settings_account_deleted">Сметката е успешно избришена</string>
</resources>